src/objects/inscor__Kit_Version__c.object
<CustomObject>
    <description>Renamed Kit Object</description>
    <fields>
        <fullName>inscor__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Estimated_Unit_Cost__c</fullName>
        <label>Estimated Unit Cost</label>
        <summarizedField>inscor__Kit_List__c.inscor__Estimated_Extended_Cost__c</summarizedField>
        <summaryForeignKey>inscor__Kit_List__c.inscor__Kit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Kit_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>inscor__Work_Order__c.inscor__Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Kit Versions</relationshipLabel>
        <relationshipName>Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Number_of_Lines__c</fullName>
        <description>Number of Kit Lines</description>
        <label>Number of Lines</label>
        <summaryForeignKey>inscor__Kit_List__c.inscor__Kit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Provide the owner code to use for the soft kit feature in Sales Orders.</inlineHelpText>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Kit Versions</relationshipLabel>
        <relationshipName>Kit_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Revision__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Template_BOM_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template BOM Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Kit_Template__c</field>
                <operation>equals</operation>
                <valueField>inscor__Work_Order_Task__c.inscor__Work_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipName>Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Kit Version</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KITV-{0}</displayFormat>
        <label>Kit Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>